--- a/Aggregated_Features.ipynb
+++ b/Aggregated_Features.ipynb
@@ -4105,6 +4105,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## For `agg_period` = 48h"
+      ],
+      "metadata": {
+        "id": "GM1VxG6y9oQN"
+      },
+      "id": "GM1VxG6y9oQN"
+    },
+    {
       "cell_type": "code",
       "execution_count": 25,
       "id": "94f45d18",
